Closed Bug 383853 Opened 18 years ago Closed 18 years ago

Leak in nsThebesDeviceContext when printing

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: kherron+mozilla, Assigned: kherron+mozilla)

References

()

Details

(Keywords: memory-leak)

Attachments

(1 file)

nsThebesDeviceContext::InitForPrinting addrefs an nsIDeviceContextSpec object but never releases it. This leaks one object per print or print preview operation.
Attachment #267799 - Flags: superreview?(roc)
Attachment #267799 - Flags: review?(pavlov)
Comment on attachment 267799 [details] [diff] [review] Convert to nsCOMPtr nice catch
Attachment #267799 - Flags: superreview?(roc)
Attachment #267799 - Flags: superreview+
Attachment #267799 - Flags: review?(pavlov)
Attachment #267799 - Flags: review+
Checked in. Resolving FIXED.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: