Bug 383853 - Leak in nsThebesDeviceContext when printing. r+sr=roc.