gfx/src/thebes/nsThebesDeviceContext.h
@@ -155,7 +155,7 @@ private:
     nsRefPtrHashtable<nsISupportsHashKey, gfxASurface> mWidgetSurfaceCache;
 
     nsRefPtr<gfxASurface> mPrintingSurface;
-    nsIDeviceContextSpec *mDeviceContextSpec;
+    nsCOMPtr<nsIDeviceContextSpec> mDeviceContextSpec;
 };
 
 #endif /* _NS_CAIRODEVICECONTEXT_H_ */
